[gd_scene load_steps=4 format=3 uid="uid://bgnuqq06g1x0o"]

[ext_resource type="Theme" uid="uid://dqyfggoaaux27" path="res://default_theme.tres" id="1_rbu5y"]
[ext_resource type="Script" path="res://scripts/pause-menu.gd" id="2_cbgb5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aoo70"]
bg_color = Color(0.117647, 0.121569, 0.141176, 0.733333)

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_rbu5y")
script = ExtResource("2_cbgb5")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -151.0
offset_top = -151.0
offset_right = 151.0
offset_bottom = 151.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_aoo70")

[node name="RichTextLabel" type="RichTextLabel" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -98.0
offset_top = 32.0
offset_right = 98.0
offset_bottom = 72.0
grow_horizontal = 2
theme_override_font_sizes/normal_font_size = 32
theme_override_font_sizes/bold_font_size = 32
bbcode_enabled = true
text = "Game paused"
fit_content = true
autowrap_mode = 0

[node name="ButtonExit" type="Button" parent="Panel" groups=["button"]]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -75.0
offset_top = 208.0
offset_right = 75.0
offset_bottom = 247.0
grow_horizontal = 2
text = "Exit to menu"

[node name="ButtonTryAgain" type="Button" parent="Panel" groups=["button"]]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -75.0
offset_top = 152.0
offset_right = 75.0
offset_bottom = 191.0
grow_horizontal = 2
text = "Try again"

[node name="ButtonContinue" type="Button" parent="Panel" groups=["button"]]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -75.0
offset_top = 96.0
offset_right = 75.0
offset_bottom = 135.0
grow_horizontal = 2
text = "Continue"

[connection signal="pressed" from="Panel/ButtonExit" to="." method="on_button_exit_pressed"]
[connection signal="pressed" from="Panel/ButtonTryAgain" to="." method="on_button_try_again_pressed"]
[connection signal="pressed" from="Panel/ButtonContinue" to="." method="on_button_continue_pressed"]
